kubernetes-manifests/bar-au-api-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-au-api-rest
  labels:
    service: bar-au-api-rest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar-au-api-rest
  template:
    metadata:
      labels:
        app: bar-au-api-rest
    spec:
      containers:
        - name: bar-au-api-rest
          image: bar-au-api-rest
          ports:
            - name: bar-au-api-rest
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: bar-au-api-rest
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: bar-au-api-rest
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: bar-au-api-rest
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: bar-au-api-rest
  selector:
    app: bar-au-api-rest
