kubernetes-manifests/pgweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgweb
  labels:
    service: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgweb
  template:
    metadata:
      labels:
        app: pgweb
    spec:
      containers:
        - name: pgweb
          image: pgweb
          ports:
            - name: pgweb
              containerPort: 8081
          livenessProbe:
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: pgweb
spec:
  type: ClusterIP
  ports:
  - port: 8081
    protocol: TCP
    targetPort: pgweb
  selector:
    app: pgweb
